[B] Misc style fixes to project hero/content blocks
* Adjusts breakpoint for text block layout change to show cover and
two-column layout until narrower viewport width
* Improves responsive sizing of elements in resource collection thumbs
* Increases min-width of hero right-hand block
* Fixes iOS text selection blocking use of drag handles on backend
* Fixes collapse of callout chip buttons when long title present
* Prevents hero block "Edit" label from showing on very narrow viewports
* Reduces spacing between content block buttons on narrow viewports
* Sets `overflow` to `auto` on drawers to prevent empty scrollbars

--- a/client/src/theme/Components/backend/_drawer.scss
+++ b/client/src/theme/Components/backend/_drawer.scss
@@ -5,7 +5,7 @@
   bottom: 0;
   width: 100%;
   padding: 20px $containerPaddingResp 33px;
-  overflow: scroll;
+  overflow: auto;
   background-color: $neutral100;
 
   .drawer-enter & {
