--- a/client/src/theme/Components/browse/text/_text-block.scss
+++ b/client/src/theme/Components/browse/text/_text-block.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
 
-  @include respond($break80) {
+  @include respond($break60) {
     flex-direction: row;
   }
 
@@ -40,7 +40,7 @@
     margin-bottom: 0;
     line-height: 1;
 
-    @include respond($break80) {
+    @include respond($break60) {
       display: block;
     }
 
@@ -147,7 +147,7 @@
     padding-left: 15px;
     margin-top: 20px;
 
-    @include respond($break80) {
+    @include respond($break60) {
       padding-right: 0;
       padding-left: 0;
       margin-top: 4px;
@@ -169,12 +169,12 @@
     }
 
     &--inline {
-      @include respond($break80) {
+      @include respond($break60) {
         flex-direction: row;
         justify-content: flex-end;
 
         > :not(:first-child) {
-          @include respond($break80) {
+          @include respond($break60) {
             margin-top: 0;
             margin-left: 12px;
           }
@@ -224,7 +224,7 @@
       padding-top: 15px;
     }
 
-    @include respond($break80) {
+    @include respond($break60) {
       justify-content: flex-end;
     }
   }
